--- a/www/receta.html
+++ b/www/receta.html
@@ -38,6 +38,9 @@ de GNU junto con este programa. Si no, vea <http://www.gnu.org/licenses/>.
             </div>
             <div id='titulo'>
             </div>
+            <div id='boton-ayuda'>
+                <button id='ayuda'>?</button>
+            </div>
             <div id='boton-agregar'>
                 <button id='anadir-ingrediente'>+</button>
             </div>
