--- a/www/index.html
+++ b/www/index.html
@@ -53,5 +53,8 @@ de GNU junto con este programa. Si no, vea <http://www.gnu.org/licenses/>.
             
             <ul id="lista-recetas"></ul>
         </section>
+        <div id='boton-borrar'>
+                <button id="borrar">Borrar todo</button>
+        </div>
     </body>
 </html>
